--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,9 @@ html
         link(rel="stylesheet", href="/material-design-icons-iconfont/material-design-icons.css")
         link(rel="stylesheet", href="/font-awesome/css/font-awesome.min.css")
         link(rel="stylesheet", href="/css/init.css")
+
+        script(src="/jquery/jquery.min.js")
+        script(src="/vue/vue.min.js")
     body
         header
             nav.blue.lighten-1.theme
@@ -45,6 +48,10 @@ html
                                     a(href="/minecraft/nick") 닉네임 조회
                                 li
                                     a(href="/minecraft/uuid") UUID 조회
+                                li
+                                    a(href="/minecraft/history") History 조회
+                                li
+                                    a(href="/minecraft/api") API Docs
         .container#contents(style="min-height: 400px")
             .row
                 .col.s12.l1.push-l11#floatMenu
@@ -80,9 +87,6 @@ html
                 .container
                     p © 2017. 볕뉘(small-sunshine) all rights reserved.
 
-        script(src="/jquery/jquery.min.js")
-        script(src="/vue/vue.min.js")
-        //script(src="/waves/waves.min.js")
         script(async, src="/materialize/js/materialize.js")
         script(async, src="/js/init.js")
         block scripts
