--- a/views/minecraft/nick.pug
+++ b/views/minecraft/nick.pug
@@ -1,7 +1,7 @@
 extends ../layout.pug
 
 block title
-    title Minecraft Nick
+    title ON Demand - Minecraft - Nickname Query
 block content
     #search.section.scrollspy
         .card.z-depth-2
