--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,13 @@ html
 
         script(src="/jquery/jquery.min.js")
         script(src="/vue/vue.min.js")
+
+        script(async, src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
+        script.
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-2810659463174293",
+                enable_page_level_ads: true
+            });
     body
         header
             nav.blue.lighten-1.theme
@@ -52,7 +59,12 @@ html
                                 li
                                     a(href="/minecraft/api") API Docs
         .container#contents(style="min-height: 400px")
-            .row
+            <!-- script(async, src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
+            <!-- On Demand-main -->
+            <!-- ins.adsbygoogle(style="display:block", data-ad-client="ca-pub-2810659463174293", data-ad-slot="4386636415", data-ad-format="auto")
+            <!-- script.
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            -->.row
                 .col.s12.l1.push-l11#floatMenu
                     a(href="/donate")
                         <!-- Donate icon by Icons8 -->
