--- a/views/minecraft/api.pug
+++ b/views/minecraft/api.pug
@@ -15,7 +15,8 @@ block content
                     | 본 API는 
                     b JSONP
                     |  를 지원합니다. 
-                    b URI?callback=(function name)
+                    b URI
+                    i ?callback=(function name)
                     |  으로 사용이 가능합니다.
     #nick.section.scrollspy
         .card.z-depth-2
