--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
         link(rel="stylesheet", href="/materialize/css/materialize.min.css")
         link(rel="stylesheet", href="/material-design-icons-iconfont/material-design-icons.css")
         link(rel="stylesheet", href="/font-awesome/css/font-awesome.min.css")
-        link(rel="stylesheet", href="/css/init.css")
+        link(rel="stylesheet", href="/css/init.min.css")
 
         script(src="/jquery/jquery.min.js")
         script(src="/vue/vue.min.js")
@@ -120,9 +120,9 @@ html
                 .container
                     p © 2017. 볕뉘(small-sunshine) all rights reserved.
         script(async, src="/materialize/js/materialize.js")
-        script(async, src="/js/init.js")
-        script(async, src="/js/sidenav.js")
-        script(async, src="/js/dropdown.js")
+        script(async, src="/js/init.min.js")
+        script(async, src="/js/sidenav.min.js")
+        script(async, src="/js/dropdown.min.js")
         script(async, src="/js/jquery.sticky-kit.min.js")
-        script(async, src="/js/scrollspy.js")
+        script(async, src="/js/scrollspy.min.js")
         block scripts
