--- a/views/minecraft/history.pug
+++ b/views/minecraft/history.pug
@@ -117,5 +117,5 @@ block scrollspy
             li
                 a(href="#help") Help
 block scripts
-    script(async, src="/js/mchistory.js")
+    script(async, src="/js/mchistory.min.js")
     script(async, src="/moment/moment.min.js")
