--- a/views/minecraft/uuid.pug
+++ b/views/minecraft/uuid.pug
@@ -111,5 +111,5 @@ block scrollspy
             li
                 a(href="#help") Help
 block scripts
-    script(async, src="/js/mcuuid.js")
+    script(async, src="/js/mcuuid.min.js")
     script(async, src="/moment/moment.min.js")
