--- a/views/minecraft/api.pug
+++ b/views/minecraft/api.pug
@@ -2,8 +2,8 @@ extends ../layout.pug
 
 block title
     title ON Demand - Minecraft - API
-    link(rel="stylesheet", href="/css/api.css")
-    link(rel="stylesheet", href="/css/jjsonviewer.css")
+    link(rel="stylesheet", href="/css/api.min.css")
+    link(rel="stylesheet", href="/css/jjsonviewer.min.css")
 block content
     #info.section.scrollspy
         .card.z-depth-2
