grunt 수정, yarn 대응, 프로파일 생성

--- a/views/minecraft/api.pug
+++ b/views/minecraft/api.pug
@@ -282,5 +282,5 @@ block scrollspy
             li
                 a(href="#history") Query History
 block scripts
-    script(async, src="/js/jjsonviewer.js")
-    script(async, src="/js/api.js")
+    script(async, src="/js/jjsonviewer.min.js")
+    script(async, src="/js/api.min.js")
