Revert "grunt 수정, yarn 대응, 프로파일 생성"
This reverts commit 0a11dd6892be96069ebe8792a5d29a843398aa8a.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,14 +30,12 @@ html
                         i.material-icons menu
                     ul.right.hide-on-med-and-down
                         li
-                            a(href="/profile") Profile
+                            a(href="#") test
                         li
                             a.dropdown-button(href="/minecraft", data-activates="minecraft-nav") 
                                 | Minecraft
                                 i.material-icons.right arrow_drop_down
                             ul#minecraft-nav.dropdown-content
-                                li
-                                    a.blue-text.text-lighten-1(href="/minecraft") Index
                                 li
                                     a.blue-text.text-lighten-1(href="/minecraft/nick") 닉네임 조회
                                 li
@@ -52,19 +50,15 @@ html
                                 i.material-icons.right arrow_drop_down
                             ul#dev-nav.dropdown-content
                                 li
-                                    a.blue-text.text-lighten-1(href="/dev") Index
-                                li
-                                    a.blue-text.text-lighten-1(href="/dev/gjmoribot") GJMoriBot
+                                    a(href="/dev/gjmoribot") GJMoriBot
                     ul.side-nav#mobile-menu
                         li
-                            a(href="/profile") Profile
+                            a(href="#") test
                         li
                             a.dropdown-button(href="/minecraft", data-activates="minecraft-side") 
                                 | Minecraft
                                 i.material-icons.right arrow_drop_down
                             ul#minecraft-side.dropdown-content
-                                li
-                                    a(href="/minecraft") Index
                                 li
                                     a(href="/minecraft/nick") 닉네임 조회
                                 li
@@ -78,8 +72,6 @@ html
                                 | Dev
                                 i.material-icons.right arrow_drop_down
                             ul#dev-side.dropdown-content
-                                li
-                                    a(href="/dev") Index
                                 li
                                     a(href="/dev/gjmoribot") GJMoriBot
         .container#contents
@@ -119,11 +111,13 @@ html
                         h5.white-text Links
                         ul
                             li
-                                a.grey-text.text-lighten-3(href="/profile") Profile
+                                a.grey-text.text-lighten-3(href="#") test
                             li
-                                a.grey-text.text-lighten-3(href="/minecraft") Minecraft
+                                a.grey-text.text-lighten-3(href="#") test
                             li
-                                a.grey-text.text-lighten-3(href="/dev") Dev
+                                a.grey-text.text-lighten-3(href="#") test
+                            li
+                                a.grey-text.text-lighten-3(href="#") test
             .footer-copyright
                 .container
                     p © 2017. 볕뉘(small-sunshine) all rights reserved.
