--- a/views/dev/index.pug
+++ b/views/dev/index.pug
@@ -11,7 +11,7 @@ block content
                 | Telegram GJMoriBot 소개페이지로 이동합니다.
                 br
                 br
-                a.btn.light-blue.lighten-1(href="/dev/gjmoribot") 이동하기
+                a.btn.light-blue.lighten-1(href="/dev/gjmoribot") #{texts.goto}
 block scrollspy
     div
         ul.section.table-of-contents
