--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,8 @@ html
 
         script(src="/jquery/jquery.min.js")
         script(src="/vue/vue.min.js")
+        script(src="/materialize/js/materialize.min.js")
+        script(src="/js/jquery.sticky-kit.min.js")
 
         script(async, src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
         script.
@@ -125,10 +127,8 @@ html
             .footer-copyright
                 .container
                     p © 2017. 볕뉘(small-sunshine) all rights reserved.
-        script(async, src="/materialize/js/materialize.js")
         script(async, src="/js/init.min.js")
         script(async, src="/js/sidenav.min.js")
         script(async, src="/js/dropdown.min.js")
-        script(async, src="/js/jquery.sticky-kit.min.js")
         script(async, src="/js/scrollspy.min.js")
         block scripts
