--- a/views/minecraft/history.pug
+++ b/views/minecraft/history.pug
@@ -6,7 +6,7 @@ block content
     #search.section.scrollspy
         .card.z-depth-2
             .card-content
-                #mchistory(v-cloak)
+                #app(v-cloak)
                     p.card-title 마인크래프트 닉네임 변경이력 조회
                     p 마인크래프트 UUID으로 닉네임 변경기록을 찾아볼 수 있습니다.
                     br
@@ -72,7 +72,7 @@ block content
                     div(v-if="form == true")
                         form.row(v-on:submit.prevent="onSubmit")
                             .input-field.col.s9
-                                input#input(placeholder="UUID", type="text", v-model="query_uuid")
+                                input#input(placeholder="UUID", type="text", v-model="query")
                                 label(for="uuid") UUID
                             .col.s3
                                 input.btn.btn-large.green.darken-2(type="submit" value="조회")
@@ -117,5 +117,6 @@ block scrollspy
             li
                 a(href="#help") Help
 block scripts
-    script(async, src="/js/mchistory.min.js")
+    script(async, src="/url.min.js")
     script(async, src="/moment/moment.min.js")
+    script(async, src="/js/mchistory.min.js")
