--- a/views/minecraft/history.pug
+++ b/views/minecraft/history.pug
@@ -7,8 +7,8 @@ block content
         .card.z-depth-2
             .card-content
                 #app(v-cloak)
-                    p.card-title 마인크래프트 닉네임 변경이력 조회
-                    p 마인크래프트 UUID으로 닉네임 변경기록을 찾아볼 수 있습니다.
+                    p.card-title #{texts.minecraft.history.title}
+                    p #{texts.minecraft.history.description}
                     br
                     div(v-if="status == 'searching'")
                         .center-align
@@ -22,47 +22,47 @@ block content
                                         .circle
                             br
                             br
-                            p 유저를 찾고 있습니다. 잠시만 기다려주세요.
+                            p #{texts.minecraft.wait}
                     div(v-else-if="status == false")
                         .center-align
                             .card.red.lighten-2
                                 .card-content.white-text
-                                    span.card-title Error
-                                    p 없는 유저입니다. 닉네임을 다시 확인해주세요.
+                                    span.card-title #{texts.minecraft.error.title}
+                                    p #{texts.minecraft.error.not_exist}
                     div(v-else-if="status == 'uuid_null'")
                         .center-align
                             .card.red.lighten-2
                                 .card-content.white-text
-                                    span.card-title Error
-                                    p 찾을 UUID를 입력해주세요.
+                                    span.card-title #{texts.minecraft.error.title}
+                                    p #{texts.minecraft.error.null}
                     div(v-else-if="status == 'error'")
                         .center-align
                             .card.red.lighten-2
                                 .card-content.white-text
-                                    span.card-title Error
-                                    p 에러가 발생했습니다. 나중에 다시 시도해주세요.
+                                    span.card-title #{texts.minecraft.error.title}
+                                    p #{texts.minecraft.error.error}
                     div(v-else-if="status == true")
                         .center-align
                             .card.green.lighten-2
                                 .card-content.white-text
-                                    span.card-title Success
-                                    p 검색에 성공했습니다.
+                                    span.card-title #{texts.minecraft.success.title}
+                                    p #{texts.minecraft.success.success}
                             .row
                                 .col.s12.m4
                                     img(v-bind:src="'https://crafatar.com/renders/body/'+user.uuid+'?&default=MHF_Alex&overlay'")
                                 table.col.s12.m6.bordered
                                     tr
-                                        th UUID
+                                        th #{texts.minecraft.UUID}
                                         td {{user.uuid}}
                                     tr
-                                        th 검색 시간
+                                        th #{texts.minecraft.time}
                                         td {{user.query_time}}
                                 table.col.s12.m6.bordered
                                     thead
                                         tr
                                             th #
-                                            th 닉네임
-                                            th 변경 시점
+                                            th #{texts.minecraft.nickname}
+                                            th #{texts.minecraft.history.time}
                                     tbody
                                         tr(v-for="(item, index) in user.history")
                                             td {{index}}
@@ -72,50 +72,30 @@ block content
                     div(v-if="form == true")
                         form.row(v-on:submit.prevent="onSubmit")
                             .input-field.col.s9
-                                input#input(placeholder="UUID", type="text", v-model="query")
-                                label(for="uuid") UUID
+                                input#input(placeholder=texts.minecraft.UUID, type="text", v-model="query")
+                                label(for="uuid") #{texts.minecraft.UUID}
                             .col.s3
-                                input.btn.btn-large.green.darken-2(type="submit" value="조회")
-                noscript
-                    | 본 페이지는 Javascript를 기반으로 작동됩니다.
-                    br
-                    | Javascript를 사용하게끔 설정하여 주신 뒤, 
-                    | 이 페이지를 이용해주시기 바랍니다.
+                                input.btn.btn-large.green.darken-2(type="submit" value=texts.minecraft.search)
+                noscript #{texts.minecraft.noscript}
     #info.section.scrollspy(style="min-height: 200px")
         .card.z-depth-2
             .card-content
-                p.card-title 정보
-                p 유저 정보는 자체 API서버에서 받아오며, 5분 캐시가 적용됩니다.
-                p
-                | 자체 API서버는 사용을 원하신다면 
-                a(href="/minecraft/api") API Docs
-                |  를 확인 부탁드립니다.
-                p
-                |  유저 스킨은 
-                a(href="https://crafatar.com", target="_blank") Crafatar
-                |  에서 받아오고 있습니다.
+                p.card-title #{texts.minecraft.information.title}
+                div !{texts.minecraft.information.content}
     #help.section.scrollspy
         .card.z-depth-2
             .card-content
-                p.card-title 도움말
-                p 만약 도움이 필요하실 경우 여기로 연락 부탁드립니다.
-                br
-                a(href='mailto:webmaster@mori.space', target="_blank")
-                    i.material-icons.tiny contact_mail
-                    |  webmaster@mori.space
-                br
-                a(href='https://t.me/small_sunshine', target="_blank")
-                    i.fa.fa-telegram(aria-hidden='true')
-                    |  @small_sunshine
+                p.card-title #{texts.minecraft.help.title}
+                div !{texts.minecraft.help.content}
 block scrollspy
     div
         ul.section.table-of-contents
             li
-                a(href="#search") Search
+                a(href="#search") !{texts.minecraft.nick.menu.search}
             li
-                a(href="#info") Information
+                a(href="#info") !{texts.minecraft.nick.menu.info}
             li
-                a(href="#help") Help
+                a(href="#help") !{texts.minecraft.nick.menu.help}
 block scripts
     script(async, src="/url.min.js")
     script(async, src="/moment/moment.min.js")
