--- a/views/minecraft/history.pug
+++ b/views/minecraft/history.pug
@@ -7,6 +7,7 @@ block content
         .card.z-depth-2
             .card-content
                 #app(v-cloak)
+                    p#query(style="display: none")=query
                     p.card-title #{texts.minecraft.history.title}
                     p #{texts.minecraft.history.description}
                     br
