i18n 미사용하는 앱으로 수정

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -50,7 +50,7 @@ html
                                 i.material-icons.right arrow_drop_down
                             ul#dev-nav.dropdown-content
                                 li
-                                    a(href="/dev/gjmoribot") GJMoriBot
+                                    a.blue-text.text-lighten-1(href="/dev/gjmoribot") GJMoriBot
                     ul.side-nav#mobile-menu
                         li
                             a(href="#") test
