--- a/views/minecraft/history.pug
+++ b/views/minecraft/history.pug
@@ -8,8 +8,8 @@ block content
             .card-content
                 #app(v-cloak)
                     p#query(style="display: none")=query
-                    p.card-title #{texts.minecraft.history.title}
-                    p #{texts.minecraft.history.description}
+                    p.card-title 마인크래프트 닉네임 변경이력 조회
+                    p 마인크래프트 UUID으로 닉네임 변경기록을 찾아볼 수 있습니다.
                     br
                     div(v-if="status == 'searching'")
                         .center-align
@@ -23,47 +23,47 @@ block content
                                         .circle
                             br
                             br
-                            p #{texts.minecraft.wait}
+                            p 유저를 찾고 있습니다. 잠시만 기다려주세요.
                     div(v-else-if="status == false")
                         .center-align
                             .card.red.lighten-2
                                 .card-content.white-text
-                                    span.card-title #{texts.minecraft.error.title}
-                                    p #{texts.minecraft.error.not_exist}
+                                    span.card-title Error
+                                    p 없는 유저입니다. 닉네임을 다시 확인해주세요.
                     div(v-else-if="status == 'uuid_null'")
                         .center-align
                             .card.red.lighten-2
                                 .card-content.white-text
-                                    span.card-title #{texts.minecraft.error.title}
-                                    p #{texts.minecraft.error.null}
+                                    span.card-title Error
+                                    p 찾을 유저을 입력해주세요.
                     div(v-else-if="status == 'error'")
                         .center-align
                             .card.red.lighten-2
                                 .card-content.white-text
-                                    span.card-title #{texts.minecraft.error.title}
-                                    p #{texts.minecraft.error.error}
+                                    span.card-title Error
+                                    p 에러가 발생했습니다. 나중에 다시 시도해주세요.
                     div(v-else-if="status == true")
                         .center-align
                             .card.green.lighten-2
                                 .card-content.white-text
-                                    span.card-title #{texts.minecraft.success.title}
-                                    p #{texts.minecraft.success.success}
+                                    span.card-title Success
+                                    p 검색에 성공했습니다.
                             .row
                                 .col.s12.m4
                                     img(v-bind:src="'https://crafatar.com/renders/body/'+user.uuid+'?&default=MHF_Alex&overlay'")
                                 table.col.s12.m6.bordered
                                     tr
-                                        th #{texts.minecraft.UUID}
+                                        th UUID
                                         td {{user.uuid}}
                                     tr
-                                        th #{texts.minecraft.time}
+                                        th 검색 시간
                                         td {{user.query_time}}
                                 table.col.s12.m6.bordered
                                     thead
                                         tr
                                             th #
-                                            th #{texts.minecraft.nickname}
-                                            th #{texts.minecraft.history.time}
+                                            th UUID
+                                            th 변경 시점
                                     tbody
                                         tr(v-for="(item, index) in user.history")
                                             td {{index}}
@@ -73,30 +73,30 @@ block content
                     div(v-if="form == true")
                         form.row(v-on:submit.prevent="onSubmit")
                             .input-field.col.s9
-                                input#input(placeholder=texts.minecraft.UUID, type="text", v-model="query")
-                                label(for="uuid") #{texts.minecraft.UUID}
+                                input#input(placeholder="UUID", type="text", v-model="query")
+                                label(for="uuid") UUID
                             .col.s3
-                                input.btn.btn-large.green.darken-2(type="submit" value=texts.minecraft.search)
-                noscript #{texts.minecraft.noscript}
+                                input.btn.btn-large.green.darken-2(type="submit" value="조회")
+                noscript 본 페이지는 Javascript를 기반으로 작동됩니다.<br/>Javascript를 사용하게끔 설정하여 주신 뒤, 이 페이지를 이용해주시기 바랍니다.
     #info.section.scrollspy(style="min-height: 200px")
         .card.z-depth-2
             .card-content
-                p.card-title #{texts.minecraft.information.title}
-                div !{texts.minecraft.information.content}
+                p.card-title 정보
+                div <p>유저 정보는 자체 API서버에서 받아오며, 5분 캐시가 적용됩니다.</p><p>자체 API서버는 사용을 원하신다면 <a href=\"/minecraft/api\">API Docs</a> 를 확인 부탁드립니다.</p><p> 유저 스킨은 <a href=\"https://crafatar.com\" target=\"_blank\">Crafatar</a> 에서 받아오고 있습니다.</p>
     #help.section.scrollspy
         .card.z-depth-2
             .card-content
-                p.card-title #{texts.minecraft.help.title}
-                div !{texts.minecraft.help.content}
+                p.card-title 도움말
+                div <p>만약 도움이 필요하신 경우 여기로 연락 부탁드립니다.<br/><a href=\"mailto:webmaster@mori.space\" target=\"_blank\"><i class=\"material-icons tiny\">contact_mail</i> webmaster@mori.space</a><br/><a href=\"https://t.me/small_sunshine\" target=\"_blank\"><i aria-hidden=\"true\" class=\"fa fa-telegram\"></i> @small_sunshine</a></p>
 block scrollspy
     div
         ul.section.table-of-contents
             li
-                a(href="#search") !{texts.minecraft.nick.menu.search}
+                a(href="#search") Search
             li
-                a(href="#info") !{texts.minecraft.nick.menu.info}
+                a(href="#info") Information
             li
-                a(href="#help") !{texts.minecraft.nick.menu.help}
+                a(href="#help") Help
 block scripts
     script(async, src="/url.min.js")
     script(async, src="/moment/moment.min.js")
