--- a/views/minecraft/uuid.pug
+++ b/views/minecraft/uuid.pug
@@ -29,7 +29,7 @@ block content
                             .card.red.lighten-2
                                 .card-content.white-text
                                     span.card-title Error
-                                    p 없는 유저입니다. 닉네임을 다시 확인해주세요.
+                                    p 없는 유저입니다. UUID를 다시 확인해주세요.
                     div(v-else-if="status == 'uuid_null'")
                         .center-align
                             .card.red.lighten-2
